--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,7 @@
 
     <main>
        <div class="welcome" id="welcome">
-        <!-- <h1>Welcome {fName}!</h1>
-        <img src="{profilePicture}" alt="" class="profilepicture"> -->
+        <img  id="welcomeimg">
       </div>
        
 
