--- a/public/chat.html
+++ b/public/chat.html
@@ -8,19 +8,17 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
-    <header class="heading" id="heading">
+
         <nav class="navbar">
           <div class="nav-left">
-            <h1>
-            TeleChat
-            </h1>
+            <h1>TeleChat</h1>
           </div>  
           <div class="nav-right">
             <span id="greeting" class="greeting"></span>
             <img alt="User Photo" class="user-photo" id="user-photo">
           </div>
         </nav>
-    </header>
+
 
 
         
