--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,15 @@
 
     <main>
        <div class="welcome" id="welcome">
-        <img  id="welcomeimg">
+        <!-- <h1>Welcome {fName}!</h1>
+        <img src="{profilePicture}" alt="" class="profilepicture"> -->
       </div>
+       
+
+      <div class="joinchat">
         <button><a href="chat.html">Join Chat</a></button>
+
+      </div>
     </main>
 
     <script src="app.js" ></script>
