--- a/public/chat.html
+++ b/public/chat.html
@@ -6,6 +6,7 @@
     <title>Chat</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
 </head>
 <body>
 
@@ -26,5 +27,5 @@
         <a href="index.html"> Go Back</a>
     </main>
 </body>
-<script src="app.js"></script>
+<script src="chat.js"></script>
 </html>
