styling chatroom nav

--- a/public/chat.html
+++ b/public/chat.html
@@ -15,7 +15,7 @@
             <h1>TeleChat</h1>
           </div>  
           <div class="nav-right">
-            <span id="greeting" class="greeting"></span>
+            <span id="greeting" class="greeting"></span><br>
             <img alt="User Photo" class="user-photo" id="user-photo">
           </div>
         </nav>
